# JohnnyTracer1

./: CMakeLists.txt  README  README~  build.sh  just_the_outlines.tga  sample.tga  sample2.tga  therewasanattemp.tga
Raytrace473/: CMakeLists.txt  README  README~  bunny.tga  bunny2.tga  bunnyplane.tga  coolmistake1.tga  coolmistake2.tga  coolmistake3.tga  how_even_(INITIALIZE_YOUR_VECS).tga  nowwithspecular.tga  prebleed.tga  run.sh  samplenorot.tga
Raytrace473/cmake/: FindEigen.cmake
Raytrace473/ext/googletest/googletest/src/: gtest-port.cc
Raytrace473/res/: bunnyplane.pov  drake.pov  sample.tga  simple_reflect2.pov  simple_reflect3.pov  simple_refract1.pov  valTest.pov  valentineextreme.pov~
Raytrace473/src/antialiasing/: Jittered.h
Raytrace473/src/cameras/: CMakeLists.txt  Camera.cpp  PinholeCamera.h
Raytrace473/src/cameras/scenes/: OctreeScene.cpp
Raytrace473/src/fileparsing/: POVObject.h
Raytrace473/src/geometry/: BoundingBox.cpp  Box.cpp  Color.cpp  Material.h  Plane.cpp  Ray.cpp  Shape.cpp  Shape.h  Sphere.h  Transform.cpp  Triangle.h
Raytrace473/src/lights/: Light.cpp
Raytrace473/src/partitioning/: BVHTree.cpp  BVHTree.h  CMakeLists.txt  Octree.cpp
Raytrace473/src/util/: Constants.cpp  SceneContext.cpp
Raytrace473/test/: BaseTest.cpp  BounceTest.cpp  CMakeLists.txt  OctreeTest.cpp  TransformTest.cpp
antialiasing/: Jittered.cpp  Sampler.h
cameras/: Camera.h  PinholeCamera.cpp  stb_image_write.h
cameras/scenes/: BVHScene.cpp  BVHScene.h  Scene.cpp  Scene.h
cmake/: FindEigen.cmake
ext/googletest/googletest/include/gtest/internal/: gtest-filepath.h
ext/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest.cc
ext/googletest/googletest/test/: gtest-options_test.cc  gtest_unittest.cc
fileparsing/: POVParser.cpp  POVParser.h
geometry/: BounceData.h  Color.h  HitData.h  Material.cpp  Transform.h  Triangle.cpp
lights/: CMakeLists.txt
res/: cornell.pov  planes.pov  refract2.pov  sample.tga  simple.pov  simple_reflect1.pov  simple_tri.pov  valentineextreme.pov
src/: CMakeLists.txt  main.cpp
src/antialiasing/: CMakeLists.txt  Jittered.cpp  Jittered.h  Sampler.cpp  Sampler.h
src/cameras/: CMakeLists.txt  Camera.cpp  Camera.h  PinholeCamera.cpp  PinholeCamera.h  Scene.cpp  Scene.h
src/cameras/scenes/: BVHScene.cpp  OctreeScene.h
src/fileparsing/: CMakeLists.txt  POVObject.cpp  POVParser.cpp  POVParser.h
src/geometry/: BounceData.h  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Color.cpp  Color.h  HitData.cpp  HitData.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h
src/lights/: Light.cpp  Light.h
src/partitioning/: BVHTree.cpp  Octree.h
src/util/: CMakeLists.txt  Constants.cpp  Constants.h  MathUtils.cpp  MathUtils.h  POVParser.cpp  POVParser.h  SceneContext.cpp  SceneContext.h
test/: BaseTest.cpp  BounceTest.cpp  CMakeLists.txt  ShadeTest.cpp
util/: CMakeLists.txt  MathUtils.cpp  MathUtils.h
